# SHARK-ModelDev

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  modeling_qwen.py  mypy-requirements.txt  opt-builder.py  pytorch-cpu-requirements.txt  requirements.txt  run.py  runTests.py  setup.cfg  setup.py  sync_deps.py  torchvision-requirements.txt  turbine-models-requirements.txt  upload_to_azure.sh  version_info.json
.github/workflows/: build_packages.yml  ci_build_test_cpp_linux.yml  lint.yml  make_release.yml  test.yml  test_llama_end_to_end.yml  test_models.yml  test_sdxl.yml  test_shark.yml
build_tools/: build_release.py
build_tools/ci/: build_linux_packages.sh  build_test_cpp.sh  linux_default_toolchain.cmake  linux_packages_toolchain.cmake  run_paritybench_test.sh
build_tools/python_deploy/: build_linux_packages.sh
ci-tools/: latest-pkgci.py
compiler/: iree_compiler_plugin_group.cmake  lit.cfg.py  pyproject.toml  setup.py
compiler/src/: CMakeLists.txt
compiler/src/shark-turbine/compiler/: CMakeLists.txt  PluginRegistration.cpp
compiler/src/shark-turbine/compiler/InputConversion/Torch/: CMakeLists.txt  ConvertTMTensorToLinalgExt.cpp  PassDetail.h  Passes.cpp  Passes.h  Passes.td
compiler/src/shark-turbine/compiler/InputConversion/Torch/test/: CMakeLists.txt  convert_tm_tensor_to_linalg_ext.mlir
core/: README.md  iree-requirements.txt  misc-requirements.txt  mypy.ini  pytorch-cpu-requirements.txt  pytorch-requirements.txt  requirements.txt  setup.py
core/tests/: top_level_package_test.py
docs/: releasing.md  roadmap.md
docs/developer/: known_issues.md
examples/aot_mlp/: mlp_export_simple.py
examples/eager_mlp/: mlp_eager_simple.py
examples/llama2_inference/: README.md  llama2.ipynb  requirements.txt  stateless_llama.py
examples/resnet/: requirements.txt  resnet-18.py  resnet-50-fp16.py
examples/resnet-18/: README.md  requirements.txt  resnet-18.ipynb  resnet-18.mlir  resnet-18.py
examples/sd1.4_inference/: clip_test.py  unet_test.py  vae_test.py
examples/sd1.5_inference/: clip_test.py  sd.py  stateless_sd.py  test.py  unet_test.py  vae_test.py
frontend/: setup.py
llm/: README.md  mypy.ini  requirements.txt  setup.py
llm/scripts/: dump_gguf.py  load_gguf.py  validate_llama_model.py  validate_llama_ref_model.py  validate_paged_llama_model.py
models/: README.md  requirements.txt  setup.py
models/turbine_models/: README.md  model_builder.py  (+1 more)
runtime/: README.md  pyproject.toml  setup.py
serving/: README.md  mypy.ini  requirements.txt  setup.py
(+525 files in other folders)
